[package]
name = "cub"
version = "0.3.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
publish = false

[dependencies]
chrono = "0.4.6"
clap = { version = "2.32.0", features = ["yaml"] }
env_logger = "0.5.13"
dirs = "1.0.4"
log = "0.4.5"
rusqlite = "0.15.0"
term = "0.5.1"

[lib]
name = "libcub"
path = "src/libcub/mod.rs"

[[bin]]
name = "cub"
path = "src/main.rs"