[package]
name = "cub"
version = "0.3.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
publish = false

[dependencies]
chrono = "0.4.11"
clap = { version = "2.33.1", features = ["yaml"] }
env_logger = "0.7.1"
dirs = "2.0.2"
log = "0.4.8"
rusqlite = "0.23.1"
term = "0.6.1"

[lib]
name = "libcub"
path = "src/libcub/mod.rs"

[[bin]]
name = "cub"
path = "src/main.rs"