[package]
name = "cub"
version = "0.3.2"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = { version = "2.33.3", features = ["yaml"] }
env_logger = "0.7.1"
dirs = "3.0.1"
log = "0.4.11"
rusqlite = "0.24.0"
term = "0.6.1"

[lib]
name = "libcub"
path = "src/libcub/mod.rs"

[[bin]]
name = "cub"
path = "src/main.rs"
